# Snake_SDL2

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM.md  FEATURES.md  LICENSE  Makefile  PLATFORM_VERIFICATION_REPORT.md  PLAYER_GUIDE.md  README.md  README_REVOLUTIONARY.md  README_old.md  SDL3_MIGRATION.md  build_android.sh  build_linux.sh  build_windows.bat  config.ini  fonction_bell.cpp  fonction_bell.h  main_bell.cpp  prog  run_snake.sh  test.c  verify_cross_platform.sh
android/: README.md  gradle.properties  gradlew  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/jni/: Android.mk  Application.mk
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/snake/: MainActivity.java
android/app/src/main/res/mipmap-mdpi/: README_ICON.md
data/: prog  snake_revolutionary
src/: achievements.cpp  achievements.h  food.c  game.c  game.cpp  game.h  graphics.c  main.c  main.cpp  snake.c
